# cockroach

./: .gitignore  Makefile.am  README  TODO  autogen.sh  configure.ac
src/: Makefile.am  cockroach-instance.cc  cockroach-loader.cc  cockroach-probe.h  cockroach-record-data-tool.cc  cockroach-time-measure-tool.cc  cockroach-time-measure.cc  cockroach-time-measure.h  cockroach.cc  cockroach.h  data_on_shm.cc  data_on_shm.h  disassembler.cc  disassembler.h  mapped_lib_info.cc  mapped_lib_info.h  mapped_lib_manager.cc  mapped_lib_manager.h  opecode.cc  opecode.h  opecode_relocator.cc  opecode_relocator.h  probe.cc  probe.h  probe_info.cc  probe_info.h  rip_relative_relocator.cc  rip_relative_relocator.h  shm_param_note.cc  shm_param_note.h  side_code_area_manager.cc  side_code_area_manager.h  time_measure_probe.cc  time_measure_probe.h  user_probe_data.cc  utils.cc  utils.h
test/: Makefile.am  README  helper-bin.c  implicitdlopener.c  implicitdlopener.h  implicitopentarget.c  implicitopentarget.h  target-exe.c  target.c  target.recipe  targets.c  targets.h  test-disassembler-target-i386.S  test-disassembler-target-x86_64.S  test-disassembler-target.S  test-disassembler-target.h  test-disassembler.cc  test-measure-time.cc  test-user-probe.cc  testutil.cc  testutil.h  user-probe.cc  user-probe.h
test/fixtures/: Makefile.am  make_recipe.py  test-measure-time.recipe  test-user-probe-with-loader.recipe
test/misc/: trace-user-probe-load.recipe  trace-user-probe-load.txt
utils/: Makefile.am  cockroach  cockroach-make-recipe
